syntax = "proto3";
package message;
import "google/protobuf/struct.proto";

message Key {
  string id = 1;
  bool fromMe = 2;
  string remoteJid = 3;
}

message UpsertMessagePayload {
  string id = 1;
  string jid = 2;
  Key key = 3;
  google.protobuf.Struct message_obj = 4;
  string message_type = 5;
  string cluster = 6;
  string sender = 7;
  string to_user = 8;
  string from_user = 9;
  string flow = 10;
  string status = 11;
  int32 message_timestamp = 12;
}

message HistoryMessagePayload {
  repeated UpsertMessagePayload messages = 1;
}

message UpdateMessagePayload {
  string id = 1;
  string status = 2;
}